--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
     "plugins": [
       {
         "name": "next"
-      }
+      },
+      { 
+        "name": "@0no-co/graphqlsp", 
+        "schema": "./src/graphql/schema.graphql", 
+        "tadaOutputLocation": "./src/graphql/graphql-env.d.ts"
+      } 
     ],
     "paths": {
       "@/*": ["./src/*"]
