--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.2",
+    "@types/micro-cors": "^0.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "gql.tada": "^1.7.5",
     "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
+    "micro-cors": "^0.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "postgres": "^3.4.4",
