--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@graphql-codegen/typed-document-node": "^5.0.6",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.36.2",
     "@types/micro-cors": "^0.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "gql.tada": "^1.7.5",
@@ -36,7 +39,8 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "urql": "^4.1.0"
+    "urql": "^4.1.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.3",
