ship user schema

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint",
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
+    "push": "drizzle-kit push",
     "pull": "drizzle-kit introspect"
   },
   "dependencies": {
-    "@apollo/client": "^3.10.4",
     "@auth/drizzle-adapter": "^1.1.0",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
