--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.36.2",
+    "@teamhanko/hanko-elements": "^0.11.0",
     "@types/micro-cors": "^0.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "micro-cors": "^0.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "octokit": "^4.0.2",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
