auth fixed kinda

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
     "push": "drizzle-kit push",
-    "pull": "drizzle-kit introspect"
+    "pull": "drizzle-kit introspect",
+    "drop": "drizzle-kit drop"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.1.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -22,28 +24,39 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.36.2",
     "@teamhanko/hanko-elements": "^0.11.0",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/micro-cors": "^0.1.5",
+    "arctic": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^0.6.0",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
+    "envsafe": "^2.0.3",
     "gql.tada": "^1.7.5",
+    "jsonwebtoken": "^9.0.2",
+    "lucia": "^3.2.0",
     "micro-cors": "^0.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "octokit": "^4.0.2",
+    "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "urlcat": "^3.1.0",
     "urql": "^4.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.21.2",
