--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.1.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@octokit/types": "^13.5.0",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -42,11 +43,13 @@
     "micro-cors": "^0.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "next-themes": "^0.3.0",
     "octokit": "^4.0.2",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "urlcat": "^3.1.0",
