--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^5.36.2",
+    "@tanstack/react-query-devtools": "^5.39.0",
     "@teamhanko/hanko-elements": "^0.11.0",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
